Correction post soutenance : ajout underline à la classe active de la navbar, suppression du display none qui empêchait l'activation de l'effet sur les collapse.

--- a/public/styles/components/collapse.scss
+++ b/public/styles/components/collapse.scss
@@ -49,7 +49,6 @@
   }
 
   .collapse-content {
-    display: none;
     max-height: 0;
     overflow: hidden;
     transition: max-height 0.6s ease, opacity 0.6s ease, transform 0.6s ease;
